2012-10-16 yusei
* Improve error handling on Workflow_statusModify. If requested transition is not available, then show a nice message.

2012-9-12 yusei
* Improve listbox sort feature. Now both ascending arrow and descending arrow are displayed in title column and user can sort in specific order explicitly. User also can sort multiple columns by click without using sort-on-dialog.

2013-01-28 Kazuhiko
* update RequireJS 2.1.4.

2013-01-14 Kazuhiko
* add RequireJS 2.1.2.

2012-10-16 arnaud.fontaine
* Fix background color of stat and no cell ListBox lines.

2012-08-07 Kazuhiko
* update FCKeditor to 2.6.8.

2011-01-20 Ivan
* Remove contained MochiKit Javascript library

2010-09-07 Kazuhiko
* update FCKeditor to 2.6.6.

2010-09-02 ivan
* Make universal Listbox_asHTML rendering which uses heavily CSS.

2010-07-20 yo
* Make it easier to override CSS and JavaScript. Now, you can tweak CSS and JavaScript by overriding ERP5Site_getCssRelativeUrlList and ERP5Site_getJavaScriptRelativeUrlList, respectively.

2010-06-10 kazuhiko
* Typing Enter key in listbox search fields invokes Base_doSelect instead of the page's form action.

2010-05-28 yo
* Make it possible to customize the behavior after a new content is added.

2010-03-09
* Display title in breadcrumb if getCompactTranslatedTitle does not exist.

2010-03-02 yusei
* Remove short title.

2010-02-25 yusuke
* Fix a front page broken.

2010-02-22 yo
* Stop form_render from relying on the type of editable_mode (i.e. int).

2010-02-02 yo
* Add classes into buttons defined in dialog_main.

2010-02-01 fabien
* don't display action buttons (like copy/paste, ...) in dialog_mode

2010-02-01 yo
* Add classes into elements which have ids set in page templates, so that we could get rid of the ids potentially (but we can't because of tests).

2010-02-01 yo
* Switch to class-based completely instead of id-based styling in erp5.css. The old way is kept for backward compatibility.

2010-2-1 Yusei